--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Save-a-Bull</string>
+    <string name="log_in_with_facebook">Log in with Facebook</string>
+    <string name="sign_up">sign up</string>
+    <string name="login">login</string>
 </resources>
