--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
     <string name="log_in_with_facebook">Log in with Facebook</string>
     <string name="sign_up">sign up</string>
     <string name="login">login</string>
+    <string name="facebook_app_id">2368651673362978</string>
+    <string name="fb_login_protocol_scheme">fb2368651673362978</string>
+
+
 </resources>
