--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="facebook_app_id">2368651673362978</string>
     <string name="fb_login_protocol_scheme">fb2368651673362978</string>
     <string name="title_activity_sign_up_screen">SignUpScreen</string>
+    <string name="create_account">Create Account</string>
 
 
 </resources>
