--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,7 +26,10 @@
     <string name="permission_rationale">"Contacts permissions are needed for providing email
         completions."
     </string>
-    <string name="password">Password</string>
+
+    <string name="last_name">Last Name</string>
+    <string name="first_name">First Name</string>
     <string name="username">Username</string>
+    <string name="password">Password</string>
 
 </resources>
