--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,5 +31,6 @@
     <string name="first_name">First Name</string>
     <string name="username">Username</string>
     <string name="password">Password</string>
+    <string name="about">About</string>
 
 </resources>
