--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,8 @@
     <string name="title_gallery">Gallery</string>
     <string name="title_maps">Maps</string>
     <string name="title_activity_login_screen">Sign in</string>
-    <!-- Strings related to login -->
+
+    <!-- Strings related to facebook login -->
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password (optional)</string>
     <string name="action_sign_in">Sign in or register</string>
@@ -40,6 +41,8 @@
     <string name="about_saveabull">Save-a-Bull is an application that gives users that attend the University of South Florida the opportunity to access coupons and discounts from their pockets at anytime and anywhere.</string>
     <string name="logo">logo</string>
 
+    <!--Spinner for coupon categories-->
+
     <string-array name="category_types">
         <item>Food</item>
         <item>Entertainment</item>
@@ -48,18 +51,23 @@
         <item>Grocery</item>
     </string-array>
 
-<string name="title_activity_maps">Map</string>
-<string name="invalid_first_name">Invalid Entry</string>
-<string name="invalid_last_name">Invalid Entry</string>
-<string name="invalid_username">Invalid Entry</string>
-<string name="invalid_password">Invalid Entry</string>
+    <!--Map-->
 
-    //Strings related to Users Database
+    <string name="title_activity_maps">Map</string>
 
-<string name="available_users">Available Users</string>
-<string name="users_filename">Create Files From Saved Users</string>
-<string name="create_file_prev">Name of the File</string>
-<string name="act_label">Create File from Saved Users</string>
-<string name="filename_label">Filename</string>
+    <!--Logging in / signing up-->
+
+    <string name="invalid_first_name">Invalid First Name</string>
+    <string name="invalid_last_name">Invalid Last Name</string>
+    <string name="invalid_username">Invalid Username. Must only be letters and numbers and have at least 6 characters.</string>
+    <string name="invalid_password">Invalid Password. Must include one upper case letter, a lower case letter, one digit, and be at least 8 characters</string>
+
+    <!--Strings related to Users Database-->
+
+    <string name="available_users">Available Users</string>
+    <string name="users_filename">Create Files From Saved Users</string>
+    <string name="create_file_prev">Name of the File</string>
+    <string name="act_label">Create File from Saved Users</string>
+    <string name="filename_label">Filename</string>
 
 </resources>
