--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,36 +1,26 @@
 <resources>
     <string name="app_name">Save-a-Bull</string>
-    <string name="log_in_with_facebook">Log in with Facebook</string>
     <string name="sign_up">sign up</string>
     <string name="login">login</string>
+    <string name="forgetPassword">Forget Password</string>
+
+    <string name="create_account">Create Account</string>
+
     <string name="facebook_app_id">2368651673362978</string>
     <string name="fb_login_protocol_scheme">fb2368651673362978</string>
-    <string name="title_activity_sign_up_screen">SignUpScreen</string>
-    <string name="create_account">Create Account</string>
 
     <string name="title_home">Home</string>
     <string name="title_favorites">Favorites</string>
     <string name="title_camera">Camera</string>
     <string name="title_gallery">Gallery</string>
     <string name="title_maps">Maps</string>
-    <string name="title_activity_login_screen">Sign in</string>
 
     <!-- Strings related to facebook login -->
     <string name="prompt_email">Email</string>
-    <string name="prompt_password">Password (optional)</string>
-    <string name="action_sign_in">Sign in or register</string>
-    <string name="action_sign_in_short">Sign in</string>
-    <string name="error_invalid_email">This email address is invalid</string>
-    <string name="error_invalid_password">This password is too short</string>
-    <string name="error_incorrect_password">This password is incorrect</string>
-    <string name="error_field_required">This field is required</string>
-    <string name="permission_rationale">"Contacts permissions are needed for providing email
-        completions."
-    </string>
 
     <string name="last_name">Last Name</string>
     <string name="first_name">First Name</string>
-    <string name="username">Username</string>
+    <string name="email">Email</string>
     <string name="password">Password</string>
     <string name="about">About</string>
     <string name="company_name">Company Name</string>
@@ -53,21 +43,8 @@
 
     <!--Map-->
 
-    <string name="title_activity_maps">Map</string>
-
     <!--Logging in / signing up-->
 
-    <string name="invalid_first_name">Invalid First Name</string>
-    <string name="invalid_last_name">Invalid Last Name</string>
-    <string name="invalid_username">Invalid Username. Must only be letters and numbers and have at least 6 characters.</string>
-    <string name="invalid_password">Invalid Password. Must include one upper case letter, a lower case letter, one digit, and be at least 8 characters</string>
-
     <!--Strings related to Users Database-->
-
-    <string name="available_users">Available Users</string>
-    <string name="users_filename">Create Files From Saved Users</string>
-    <string name="create_file_prev">Name of the File</string>
-    <string name="act_label">Create File from Saved Users</string>
-    <string name="filename_label">Filename</string>
 
 </resources>
