--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,8 @@
 
     <!-- Strings related to facebook login -->
     <string name="prompt_email">Email</string>
+    <string name="email">Email</string>
+    <string name="forgetPassword">Forget Password</string>
     <string name="prompt_password">Password (optional)</string>
     <string name="action_sign_in">Sign in or register</string>
     <string name="action_sign_in_short">Sign in</string>
@@ -69,5 +71,11 @@
     <string name="create_file_prev">Name of the File</string>
     <string name="act_label">Create File from Saved Users</string>
     <string name="filename_label">Filename</string>
+
+    <!--Map-->
+
+    <!--Logging in / signing up-->
+
+    <!--Strings related to Users Database-->
 
 </resources>
